--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,104 @@
 .App {
-  text-align: center;
+    text-align: center;
 }
 
 .App-logo {
-  height: 40vmin;
-  pointer-events: none;
+    height: 40vmin;
+    pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+    .App-logo {
+        animation: App-logo-spin infinite 20s linear;
+    }
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+    background-color: #282c34;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: calc(10px + 2vmin);
+    color: white;
 }
 
 .App-link {
-  color: #61dafb;
+    color: #61dafb;
 }
 
 @keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+    from {
+        transform: rotate(0deg);
+    }
+
+    to {
+        transform: rotate(360deg);
+    }
+}
+
+
+.h1 {
+    font-size: 170px;
+    color: #404040;
+    min-height: 100vh;
+    width: 100%;
+    /* background-image: url(https://i.pinimg.com/originals/74/43/a3/7443a31b6a19e5630b94a6538ff9bdd1.gif); */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 100%;
+}
+
+.first,
+.second {
+    margin-top: -200px;
+}
+
+.first {
+    color: #a8a8a8;
+    text-align: right;
+    margin-right: 100px;
+    font-size: 88px;
+}
+
+.second {
+    color: #6e6e6e;
+    text-align: right;
+    margin-right: 100px;
+    font-size: 88px;
+    margin-top: -80px;
+}
+
+.first:hover {
+    color: #6e6e6e;
+    transition: 0.6s ease
+}
+
+
+.plus,
+.minus {
+    display: flex;
+    width: 93%;
+    font-size: 80px;
+    border: 0;
+    padding: 64px 32px;
+    margin-bottom: 40px;
+    background: rgba(0, 0, 0, 0.1);
+    color: #2d2d2d;
+}
+
+.counter {
+    font-size: 180px;
+    color: #2d2d2d;
+    margin-bottom: 32px;
+    text-align: right;
+    margin-right: 100px;
+}
+
+.form {
+    margin-top: 64px;
+    display: flex;
+    margin-left: 1150px;
+    font-size: 32px;
 }
